updates the board deck sliding images and add submit button in deck modal pop

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -595,11 +595,9 @@ section
   left: 446px
 .user-access-pswd
   display: inline-block
-  padding: 20px
   p
     font-size: 20px
 .request-btn
-  margin-left: 20px
   padding: 15px
   background-color: #F09506
   color: #fff
@@ -619,8 +617,8 @@ section
     font-size: 24px
 .seperater
   padding: 0px 0px 20px
-  text-align: center
   font-weight: bold
+  padding: 20px
 .Comments-hd
   font-weight: bold
   margin-top: 18px
@@ -634,6 +632,19 @@ section
       color: #00A0C6
 .email_register label
   font-size: 25px
+#error-flash
+  color: red
+.submit-btn
+  padding: 12px 20px
+  margin-top: -9px
+  background-color: #3FA2C6
+  font-weight: bold
+  color: #fff
+  border: none
+  &:hover
+    background-color: #2782A4
+    color: #fff
+
 @media (min-width: 992px) and (max-width: 1199px)
   .hero
   .navbar > .container > .navbar-header > a.navbar-brand
