add about texts inside the about page

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -18,7 +18,7 @@
         <h2>Welcome to NodeBomb</h2>
         <p>Increase Job Opportunities, Connect & Support Developers across the world.</p>
         <p>The Online Work Showcase for developers, enhance and connect your entire work footprint with one click. Share your portfolio, resume, staff, relevant social media sites and much more...all with one well designed click. Make connecting you to the job and the world easier.</p>
-        <p>Also, connect with fellow developers across the globe, share ideas, join Q&A groups and get programming/code assistance.</p>
+        <p>Also, connect with fellow developers across the globe, share ideas, join Q&A groups and get programming/code assistance.The Social Network for Developers. Connect with Developers across the globe, build and share your portfolio with one click while connecting to top freelance jobs everywhere.</p>
       </div>
     </div>
   </div>
