--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -11,7 +11,7 @@
     <div class="container about-sec">
       <div class="col-md-5">
         <div class="about-img"> 
-          <%= image_tag ('about_1.jpg')%>
+          <iframe src="https://player.vimeo.com/video/135542058" width="460" height="260" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/135542058">NodeBomb Interviews</a> from <a href="https://vimeo.com/nodebomb">Caleb Nyameche</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         </div>
       </div>
       <div class="col-md-7 about-content">
