add videos in about page and update the texts in it

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -459,7 +459,7 @@ section
 .about-sec
   padding: 40px 0px 50px
 .about-img
-  margin-top: 25px
+  margin: 25px 0px
   img
     width: 100%
 .about-content,
