updated Staff bio, About Video links

--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -19,7 +19,7 @@
           <span class="university-name">UCLA</span>
         </div>
         
-        <p>A UCLA Science graduate, his diverse experience in film & television as well as his recent studies towards a second BS in Computer Science has given him a refreshing approach towards the tech industry. After 15 years in the film industry, being a part of projects that have awards in Sundance and Cannes, to a clothing line he designed/founded that expanded its reach worldwide, from Japan to Puerto Rico, Danso has set his sites on the tech industry. His keen eye towards design and back end development as well as his professional reach gives NodeBomb a huge advantage.</p>
+        <p>Graduating with a Science degree from UCLA, Danso’s diverse experience in film & television as well as his recent studies towards a second BS in Computer Science has given him a refreshing approach towards the tech industry. After 20 years in the film industry in front of the camera, Danso has worked on numerous award-winning film and television projects such as the Sundance award-winning Dear Wendy and the Sony pictures film, Heaven Is For Real, based on the #1 best-selling novel of the same title.  Also, an entrepreneur at heart, Danso founded and designed a clothing line as a hobby, Caleb clothing quickly expanded its reach worldwide; reaching countries such as Japan and Puerto Rico. He  currently runs the TalentBox, a music blog showcasing unsigned Artists. Danso has now set his sites on the tech industry. His keen eye towards design and back end development as well as his professional reach gives NodeBomb a huge advantage.</p>
       </div>
     </div>
     <div class="col-md-6">
