Fixed the error of about page responsive

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -644,8 +644,14 @@ section
   &:hover
     background-color: #2782A4
     color: #fff
-
+.invrt-coma
+  font-size: 30px
 @media (min-width: 992px) and (max-width: 1199px)
+  .about-img
+    margin: 25px 0px
+  .about-img iframe
+    height: 250px
+    width: 450px
   .hero
   .navbar > .container > .navbar-header > a.navbar-brand
     margin: 0px
@@ -807,6 +813,8 @@ section
   #showcase
     height: 100%
 @media (max-width: 767px)
+  .about-sec
+    padding: 0px 40px
   .inner-page .navbar-brand > span
     font-size: 30px
   .navbar-brand img
@@ -888,6 +896,11 @@ section
   #showcase
     height: 100%
 @media (max-width: 725px)
+  .about-img
+    margin: 25px -17px
+  .about-img iframe
+    height: 350px
+    width: 550px
   header.hero .header_content
     padding: 0px 15px 
   .navbar-default
@@ -902,6 +915,13 @@ section
   #showcase
     height: 100%
 @media (max-width: 580px)
+  .about-content h2
+    font-size: 25px
+  .about-img
+    margin: 25px -17px
+  .about-img iframe
+    height: 230px
+    width: 432px
   .navbar-default
     background-color: transparent
   header.hero .header_content
@@ -954,6 +974,13 @@ section
   #showcase
     height: 100%
 @media (max-width: 480px)
+  .about-content h2
+    font-size: 25px
+  .about-img
+    margin: 25px -30px
+  .about-img iframe
+    height: 220px
+    width: 367px
   .navbar-default
     background-color: transparent
   header.hero .header_content
@@ -1008,6 +1035,13 @@ section
   .email_register .btn, .bottom-email_register .btn
     padding: 0px 10px
 @media (max-width: 390px)
+  .about-content h2
+    font-size: 25px
+  .about-img
+    margin: 25px -30px
+  .about-img iframe
+    height: 220px
+    width: 367px
   .navbar-default
     background-color: transparent
   header.hero .header_content
