--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,5 @@
 <section id ="about">
-  <div class="row row heading-bg">
+  <div class="row heading-bg">
     <div class="container">
       <div class="col-lg-12 text-left">
         <h2 class="section-heading">About Us</h2>
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="container about-sec">
+    <div class="container about-sec clearfix">
       <div class="about-content">
         <h2>Welcome to NodeBomb</h2>
         <p>Increase Job Opportunities, Connect & Support Developers across the world.</p><br>
@@ -17,12 +17,10 @@
       What will you build?" </p>
         </p>
       </div>
-      <div class="col-md-6">
-        <div class="about-img"> 
-          <iframe src="https://player.vimeo.com/video/135542058" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/135542058">NodeBomb Interviews</a> from <a href="https://vimeo.com/nodebomb">Caleb Nyameche</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
-        </div>
+      <div class="col-md-6 about-img">
+        <iframe src="https://player.vimeo.com/video/135542058" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/135542058">NodeBomb Interviews</a> from <a href="https://vimeo.com/nodebomb">Caleb Nyameche</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       </div>
-      <div class="col-md-6 about-img pull-right">
+      <div class="col-md-6 about-img">
         <iframe src="https://player.vimeo.com/video/135542856" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/135542856">NodeBomb Monologue</a> from <a href="https://vimeo.com/nodebomb">Caleb Nyameche</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
       </div>
     </div>
