--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<header class="hero">  
+ <header class="hero">  
   <div class="container banner-margin-top">
     <div class="row">      
       <section class="header_content">
@@ -117,7 +117,7 @@
           <iframe width="825" height="490" src="https://www.youtube.com/embed/-D0hesKR180" frameborder="0" allowfullscreen></iframe>
         </div>
         <article>
-          <p class="Presentation-article">One of the fastest growing professions in the world...currently the demand to support that voice, outweighs the supply
+          <p class="Presentation-article"> <span class="invrt-coma">“</span> One of the fastest growing professions in the world...currently the demand to support that voice, outweighs the supply <span class="invrt-coma">”</span>
           </p>
         </article>
       </div>
