updates and bug fixing in staff page

--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -41,7 +41,7 @@
           <strong>Graphic Designer</strong>
           <span class="university-name">San Francisco Art Institude</span>
         </div>
-        <p>As a UX/UI Rene loves to Figure out what makes people tick and connecting users to their goals is where he finds success. Starting as a graphic designer out of art school Rene quickly broadened his interest in web design and eventually UX/UI design. Working with an educational startup Rene discovered his passion for mobile for mobile UX/UI work winning 3rd place at the UCSB New Venture Competition with his mobile app prototype. Since leaving Napses Rene has done freelance web design and development as well as UX consulting for space Rocket - a creative agency based in San Francisco. He has experience in User Research, Information Architecture and Visual Design.</p>
+        <p>As a UX/UI Rene loves to figure out what makes people tick and connecting users to their goals is where he finds success. Starting as a graphic designer out of art school Rene quickly broadened his interest in web design and eventually UX/UI design. Working with an educational startup Rene discovered his passion for mobile for mobile UX/UI work winning 3rd place at the UCSB New Venture Competition with his mobile app prototype. Since leaving Napses Rene has done freelance web design and development as well as UX consulting for space Rocket - a creative agency based in San Francisco. He has experience in User Research, Information Architecture and Visual Design.</p>
       </div>
     </div>
   </section>
@@ -54,7 +54,7 @@
           <strong>Front End Developer</strong>
           <span class="university-name"> CS University Long Beach</span>
         </div>
-        <p>With more than 3 years of experience in IT, startups, customer service, sales, and marketing, Ali has launched a new career in web development. Specializing in front end development he is experienced with all stages of the development cycle for dynamic web projects. He is well versed in numerous programming language including JavaScript, SQL, and PHP. Prior to joining NodeBomb, Ali worked for a software startup called Kuapay where he specialized in providing IT support. He organized marketing campaigns, and assisted with daily operations. He also worked as a QA gane tester for Square-Enix, a Japanese video company. Ali has a degree in philosophy and is currently pursing a second degree in computer science.
+        <p>With more than 3 years of experience in IT, startups, customer service, sales, and marketing, Ali has launched a new career in web development. Specializing in front end development he is experienced with all stages of the development cycle for dynamic web projects. He is well versed in numerous programming language including JavaScript, SQL, and PHP. Prior to joining NodeBomb, Ali worked for a software startup called Kuapay where he specialized in providing IT support. He organized marketing campaigns, and assisted with daily operations. He also worked as a QA game tester for Square-Enix, a Japanese video company. Ali has a degree in philosophy and is currently pursing a second degree in computer science.
         </p>
       </div>
     </div>
