--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -14,16 +14,16 @@
         <p>Increase Job Opportunities, Connect & Support Developers across the world.</p><br>
         <p>The Social Network for Developers. Connect with Developers across the globe, build and share your portfolio with one click while connecting to top freelance jobs everywhere.
       Make connecting you to the job and the world easier.<br>
-      What will you build?" </p></center>
+      What will you build? </p></center>
         </p>
       </div>
       <div class="col-md-6">
         <div class="about-img"> 
-          <iframe src="https://player.vimeo.com/video/135542058" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/135542058">NodeBomb Interviews</a> <a href="https://vimeo.com/nodebomb"></a> </p>
+          <iframe src="https://player.vimeo.com/video/135542058" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
         </div>
       </div>
       <div class="col-md-6 about-img pull-right">
-        <iframe src="https://player.vimeo.com/video/135542856" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/135542856">NodeBomb Monologue</a>  <a href="https://vimeo.com/nodebomb"></a> </p>
+        <iframe src="https://player.vimeo.com/video/135542856" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 
       </div>
     </div>
