--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -559,6 +559,7 @@ section
   .form-control
     width: 100% !important
     background-color: #fff
+    color: #777
 .bottom-email-submit-btn
   right: 16px !important
 .footer-bottom-line
