--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -462,6 +462,8 @@ section
   margin: 25px 0px
   img
     width: 100%
+  iframe
+    width: 100%
 .about-content,
 .last-p
   h2
@@ -652,7 +654,7 @@ section
     margin: 25px 0px
   .about-img iframe
     height: 250px
-    width: 450px
+    width: 100%
   .hero
   .navbar > .container > .navbar-header > a.navbar-brand
     margin: 0px
@@ -901,7 +903,7 @@ section
     margin: 25px -17px
   .about-img iframe
     height: 350px
-    width: 550px
+    width: 100%
   header.hero .header_content
     padding: 0px 15px 
   .navbar-default
@@ -922,7 +924,7 @@ section
     margin: 25px -17px
   .about-img iframe
     height: 230px
-    width: 432px
+    width: 100%
   .navbar-default
     background-color: transparent
   header.hero .header_content
@@ -981,7 +983,7 @@ section
     margin: 25px -30px
   .about-img iframe
     height: 220px
-    width: 367px
+    width: 100%
   .navbar-default
     background-color: transparent
   header.hero .header_content
@@ -1042,7 +1044,7 @@ section
     margin: 25px -30px
   .about-img iframe
     height: 220px
-    width: 367px
+    width: 100%
   .navbar-default
     background-color: transparent
   header.hero .header_content
