--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -22,7 +22,7 @@
           <iframe src="https://player.vimeo.com/video/135542058" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
         </div>
       </div>
-      <div class="col-md-6 about-img pull-right">
+      <div class="col-md-6 about-img">
         <iframe src="https://player.vimeo.com/video/135542856" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
 
       </div>
