update text in carousel for Eric

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -145,7 +145,7 @@
         <div class="team_member text-center">
           <div class="team_images mem1"></div>
           <h4><span class="story-prsn-name"><strong>Eric</strong></span> <span>USA</span></h4>
-          <p>" I created a profile and, <br> and just landed my dream job"</p>                    
+          <p>" I created a profile and<br>just landed my dream job"</p>                    
         </div>
       </div>
     </div>
