--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -8,19 +8,19 @@
 
     <div class="row">
       <div class="col-lg-12">
-        <form name="sentMessage" id="contactForm" novalidate>
+        <%= form_for :contact, url: post_contact_path, id: "contactForm" do %>
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                <input type="text" name="name" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                <input type="email" name="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
-                <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                <textarea name="message" class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
                 <p class="help-block text-danger"></p>
               </div>
               <div class=" text-left">
@@ -36,7 +36,7 @@
                 <span class="content">
                   <p>Telephone:</p>
                   <p>
-                    818-724-2851
+                    18183382487
                   </p>  
                 </span>
                 
@@ -51,7 +51,7 @@
               </div>
             </div>
           </div>
-        </form>
+        <%end%>
       </div>
     </div>
   </div>
