--- a/app/views/developers/index.html.erb
+++ b/app/views/developers/index.html.erb
@@ -1,6 +1,6 @@
  <div class="row">
     <div class="container">
-      <h4>Developers Email <span class='pull-right'>Download</span></h4>
+      <h4>Developers Email <span class='pull-right'><%= link_to "Download (CSV)", developers_path(format: "csv") %></span></h4><br/>
       <table class="table table-hover">
         <thead>
           <th>SN</th><th>Email</th>
