added margin to bottom-form-wrap

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -558,6 +558,7 @@ section
     font-size: 27px
     margin: 0px
 .bottom-form-wrap
+  margin-bottom: 25px
   .form-control
     width: 100% !important
     background-color: #fff
