finalized production udpates

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,5 @@
 <section id ="about">
-  <div class="row row heading-bg">
+  <div class="row heading-bg">
     <div class="container">
       <div class="col-lg-12 text-left">
         <h2 class="section-heading">About Us</h2>
@@ -8,22 +8,22 @@
     </div>
   </div>
   <div class="row">
-    <div class="container about-sec">
+    <div class="container about-sec clearfix">
       <div class="about-content">
-        <h2>Welcome to NodeBomb</h2>
+        <center><h2>Welcome to NodeBomb</h2>
         <p>Increase Job Opportunities, Connect & Support Developers across the world.</p><br>
-        <p>The Online Work Showcase for developers, enhance and connect your entire work footprint with one click. Share your portfolio, resume, staff, relevant social media sites and much more...all with one well designed click. Make connecting you to the job and the world easier.Also, connect with fellow developers across the globe, share ideas, join Q&A groups and get programming/code assistance.The Social Network for Developers. Connect with Developers across the globe, build and share your portfolio with one click while connecting to top freelance jobs everywhere.
+        <p>The Social Network for Developers. Connect with Developers across the globe, build and share your portfolio with one click while connecting to top freelance jobs everywhere.
       Make connecting you to the job and the world easier.<br>
-      What will you build?" </p>
+      What will you build? </p></center>
         </p>
       </div>
       <div class="col-md-6">
-        <div class="about-img"> 
-          <iframe src="https://player.vimeo.com/video/135542058" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/135542058">NodeBomb Interviews</a> from <a href="https://vimeo.com/nodebomb">Caleb Nyameche</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        <div class="about-img">
+          <iframe src="https://player.vimeo.com/video/137174539" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
         </div>
       </div>
-      <div class="col-md-6 about-img pull-right">
-        <iframe src="https://player.vimeo.com/video/135542856" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="https://vimeo.com/135542856">NodeBomb Monologue</a> from <a href="https://vimeo.com/nodebomb">Caleb Nyameche</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+      <div class="col-md-6 about-img">
+        <iframe src="https://player.vimeo.com/video/135542856" width="550" height="350" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> 
       </div>
     </div>
   </div>
