fixed the gramatical error in staff pagea and also change the contact number

--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -39,7 +39,7 @@
         <div class="name-border"></div>
         <div class="subheading">
           <strong>Graphic Designer</strong>
-          <span class="university-name">San Francisco Art Institude</span>
+          <span class="university-name">San Francisco Art Institute</span>
         </div>
         <p>As a UX/UI Rene loves to figure out what makes people tick and connecting users to their goals is where he finds success. Starting as a graphic designer out of art school Rene quickly broadened his interest in web design and eventually UX/UI design. Working with an educational startup Rene discovered his passion for mobile for mobile UX/UI work winning 3rd place at the UCSB New Venture Competition with his mobile app prototype. Since leaving Napses Rene has done freelance web design and development as well as UX consulting for space Rocket - a creative agency based in San Francisco. He has experience in User Research, Information Architecture and Visual Design.</p>
       </div>
@@ -93,7 +93,7 @@
           <span class="university-name">UMASS, Amherst</span>
         </div>
         <p>Karyn has more than 15 years of public relations experience representing technology, consumer packaged goods, retail, travel, B2B, and health care clients. Karyn specializes in developing and managing integrated public relations programs for clients including NxStage Medical, The Yankee Candle Company, BAILEYS Coffee Creamers and more. She currently servers as President of the Publicity Club of New England.
-        Prior to joining 451 Marketing, Karyn spent five years at Emerge PR, representing a wide range of local and national clients inculiding, Cartessis, CSG Systems, Harte-Hanks, Information Builders, Tizor and Trillium software. Karyn is an award-winning PR practitioner and has been published multiple times in PR trade publications.</p>
+        Prior to joining 451 Marketing, Karyn spent five years at Emerge PR, representing a wide range of local and national clients inculiding Cartessis, CSG Systems, Harte-Hanks, Information Builders, Tizor and Trillium software. Karyn is an award-winning PR practitioner and has been published multiple times in PR trade publications.</p>
       </div>
     </div>
     <div class="col-md-6">
