fixed the grammer mistake in staff page

--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -93,7 +93,7 @@
           <span class="university-name">UMASS, Amherst</span>
         </div>
         <p>Karyn has more than 15 years of public relations experience representing technology, consumer packaged goods, retail, travel, B2B, and health care clients. Karyn specializes in developing and managing integrated public relations programs for clients including NxStage Medical, The Yankee Candle Company, BAILEYS Coffee Creamers and more. She currently servers as President of the Publicity Club of New England.
-        Prior to joining 451 Marketing, Karyn spent five years at Emerge PR, representing a wide range of local and national clients inculiding Cartessis, CSG Systems, Harte-Hanks, Information Builders, Tizor and Trillium software. Karyn is an award-winning PR practitioner and has been published multiple times in PR trade publications.</p>
+        Prior to joining 451 Marketing, Karyn spent five years at Emerge PR, representing a wide range of local and national clients including Cartessis, CSG Systems, Harte-Hanks, Information Builders, Tizor and Trillium software. Karyn is an award-winning PR practitioner and has been published multiple times in PR trade publications.</p>
       </div>
     </div>
     <div class="col-md-6">
