fixed the error of staff pages top heading

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -650,6 +650,9 @@ section
     color: #fff
 .invrt-coma
   font-size: 30px
+.section-heading-staff
+  width: 495px !important
+
 @media (min-width: 992px) and (max-width: 1199px)
   .about-img
     margin: 25px 0px
