--- a/app/views/home/staff.html.erb
+++ b/app/views/home/staff.html.erb
@@ -3,7 +3,7 @@
   <div class="heading-bg row">
     <div class="container">
       <div class="text-left">
-        <h2 class="section-heading">Proposed Staff/Marketing Leadership</h2>
+        <h2 class="section-heading section-heading-staff">Proposed Staff/Marketing Leadership</h2>
         <h3 class="section-subheading text-muted"></h3>
       </div>
     </div>
