--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -271,9 +271,9 @@ fieldset[disabled] .btn-xl.active {
 
 header.hero {  
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.81) ;
+  background-color: #fff ;
   background-attachment: scroll;
-  background-image: asset_url('banner-1.jpg');
+  // background-image: asset_url('banner-1.jpg');
   background-position: center center;
   background-repeat: none;
   -webkit-background-size: cover;
