--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -58,7 +58,6 @@ a.navbar-brand
     width: 80%
 .form-wrap
   position: relative
-  width: 48%
 .email_register,
 .bottom-email_register  
   width: 100%
@@ -151,25 +150,23 @@ header.hero
   .header_content
     width: 100%
     margin: 0 auto
-    text-align: left
     h1
       font-size: 55px
       text-transform: uppercase
       font-family: 'raleway-bold'
-      font-weight: bold
-      line-height: 75px
-      margin-top: 65px
       span
-        font-size: 40px
-        font-family: 'raleway-regular'
-        font-weight: normal
+        font:
+          size: 35px
+          family: 'raleway-regular'
+          weight: bold
+        color: #000
       .bold-banner-txt
         padding-right: 30px
         font-family: 'raleway-bold'
         font-size: 55px
       .what-yuo-build-txt 
         font-size: 25px
-        color: #fff
+        color: #333
         font-family: 'raleway-regular'
         margin-left: 30px
         vertical-align: top
@@ -636,6 +633,7 @@ section
       color: #00A0C6
 .email_register label
   font-size: 25px
+  color: #333
 #error-flash
   color: red
 .submit-btn
@@ -652,6 +650,17 @@ section
   font-size: 30px
 .section-heading-staff
   width: 495px !important
+.hm-bnr-logo
+  margin-top: 50px
+.hm-bnr-phone
+  img
+    width: 90%
+    margin-top: -85px
+.form-cntr
+  text-align: center
+  margin: 0 auto
+  .form-wrap
+    margin: 0 auto !important
 
 @media (min-width: 992px) and (max-width: 1199px)
   .about-img
@@ -678,7 +687,6 @@ section
   .email_register label, .bottom-email_register label
     font-size: 30px
   .form-wrap
-    width: 50%
   .presentation_video
     height: 500px
     width: 100%
@@ -712,6 +720,8 @@ section
   #showcase
     height: 100%
 @media (max-width: 991px)
+  .hm-bnr-phone
+    display: none
   .nav > li > a
     padding: 18px 5px
   .navbar-default .nav li a
@@ -980,6 +990,8 @@ section
   #navigation
   #showcase
     height: 100%
+  .hm-bnr-logo img
+    width: 100%
 @media (max-width: 480px)
   .about-content h2
     font-size: 25px
@@ -1041,6 +1053,8 @@ section
     font-size: 16px
   .email_register .btn, .bottom-email_register .btn
     padding: 0px 10px
+  .hm-bnr-logo img
+    width: 100%
 @media (max-width: 390px)
   .about-content h2
     font-size: 25px
@@ -1072,3 +1086,5 @@ section
     font-size: 16px
   .email_register .btn, .bottom-email_register .btn
     padding: 0px 10px
+  .hm-bnr-logo img
+    width: 100%
