change the about section texts

--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -10,11 +10,10 @@
   <div class="row">
     <div class="container about-sec clearfix">
       <div class="about-content">
-        <center><h2>Welcome to NodeBomb</h2>
-        <p>Increase Job Opportunities, Connect & Support Developers across the world.</p><br>
-        <p>The Social Network for Developers. Connect with Developers across the globe, build and share your portfolio with one click while connecting to top freelance jobs everywhere.
-      Make connecting you to the job and the world easier.<br>
-      What will you build? </p></center>
+        <center><h2>Where Software Developers come to Increase.</h2>
+        <p>Increase job opportunities by 50% and Freelance pay rates up to 25%</p><br>
+        <p>The Platform for Developers to build custom Work Portfolios & Experienced Freelance Developers to connect with quality clients.<br>
+      NodeBomb. Build & Increase. </p></center>
         </p>
       </div>
       <div class="col-md-6">
