change the icon,title and its discription of startup with investor content in homepage

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -212,11 +212,11 @@
       <div class="col-md-12 text-center">
         <h2 class="community-section-heading"><span>Join the</span> nodeBomb community</h2>
         <div class="heading-border"></div>
-        <h3 class="community-2-heading">in 1-2-3-4</h3>
+        <h3 class="community-2-heading">in 1-2-3</h3>
       </div>
       <div class="row community_blocks">
         <div class="container">
-          <div class="col-md-3 text-center">
+          <div class="col-md-4 text-center">
             <div class="node-bomb-community">
               <div class="community-btns ">
                 <%= image_tag("create-portfolio.png", :alt => "community icon") %>
@@ -225,7 +225,7 @@
               <p class="community-txt-1">Quickly enhance your work profile and increase your work opportunities with an online portfolio.</p>
             </div>
           </div>
-          <div class="col-md-3 text-center">
+          <div class="col-md-4 text-center">
             <div class="node-bomb-community">
               <div class="community-btns ">
                 <%= image_tag("connect-developer.png", :alt => "community icon") %>
@@ -234,7 +234,7 @@
               <p class="community-txt-2">Connect with developers across the globe, follow each other, share ideas, share code and more.</p>
             </div>
           </div>          
-          <div class="col-md-3  text-center">
+          <!-- <div class="col-md-3  text-center">
             <div class="node-bomb-community">
               <div class="community-btns ">
                 <%= image_tag("join-group.png", :alt => "community icon") %>
@@ -242,14 +242,14 @@
               <h3>Search and join Q&A Groups</h3>
               <p class="community-txt-3">Search any programming topic or language that interests you and quickly join our group communities and discussions.</p>
             </div>
-          </div>
-          <div class="col-md-3 text-center">
+          </div> -->
+          <div class="col-md-4 text-center">
             <div class="node-bomb-community">
               <div class="community-btns ">
-                <%= image_tag("startup-with-invester.png", :alt => "community icon") %>
+                <%= image_tag("experience-ico.png", :alt => "community icon") %>
               </div>          
-              <h3>Startups connect with Investors</h3>
-              <p class="community-txt-4">Startups that meet the criteria can easily post their work to our exponentially growing list of VC's and Angel Investors.</p>
+              <h3>Experienced Freelance Devs connet with top Clients</h3>
+              <p class="community-txt-2">Experienced Developers immeditately increase job opportunities by joining NodeBomb.</p>
             </div>
           </div>
         </div>
